config-root/namespaces/sonarqube/sonarqube/sonarqube-deploy.yaml
# Source: sonarqube/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube
  namespace: "sonarqube"
  labels:
    app.kubernetes.io/name: sonarqube
    helm.sh/chart: sonarqube-0.1.6
    app.kubernetes.io/instance: sonarqube
    app.kubernetes.io/managed-by: Helm
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'sonarqube'
    wave.pusher.com/update-on-config-change: 'true'
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarqube
      app.kubernetes.io/instance: sonarqube
  template:
    metadata:
      annotations:
      labels:
        app.kubernetes.io/name: sonarqube
        helm.sh/chart: sonarqube-0.1.6
        app.kubernetes.io/instance: sonarqube
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: sonarqube-foo
      affinity:
        podAffinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: sonarqube
                    app.kubernetes.io/instance: sonarqube
                namespaces:
                  - "sonarqube"
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
      securityContext:
        fsGroup: 1001
      containers:
        - name: sonarqube
          image: docker.io/bitnami/sonarqube:9.2.4-debian-10-r0
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
          resources:
            limits:
              cpu: 400m
              memory: 756Mi
            requests:
              cpu: 200m
              memory: 512Mi
          ports:
            - name: http
              containerPort: 9000
            - name: elastic
              containerPort: 9001
          livenessProbe:
            failureThreshold: 6
            initialDelaySeconds: 100
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            httpGet:
              path: /
              port: http
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 100
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            httpGet:
              path: /
              port: http
          volumeMounts:
            - mountPath: /bitnami/sonarqube
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: sonarqube
