config-root/namespaces/sonarqube/sonarqube/sonarqube-svc.yaml
# Source: sonarqube/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
  namespace: "sonarqube"
  labels:
    app.kubernetes.io/name: sonarqube
    helm.sh/chart: sonarqube-0.1.6
    app.kubernetes.io/instance: sonarqube
    app.kubernetes.io/managed-by: Helm
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'sonarqube'
spec:
  type: LoadBalancer
  externalTrafficPolicy: "Cluster"
  loadBalancerSourceRanges: []
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: elastic
      port: 9001
      protocol: TCP
      targetPort: elastic
  selector:
    app.kubernetes.io/name: sonarqube
    app.kubernetes.io/instance: sonarqube
