config-root/namespaces/sonarqube/sonarqube/sonarqube-ingress.yaml
# Source: sonarqube/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube
  namespace: "sonarqube"
  labels:
    app.kubernetes.io/name: sonarqube
    helm.sh/chart: sonarqube-0.1.6
    app.kubernetes.io/instance: sonarqube
    app.kubernetes.io/managed-by: Helm
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'sonarqube'
spec:
  rules:
    - host: sonarqube.simonjamesrowe.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: sonarqube
                port:
                  name: http
  tls:
    - hosts:
        - sonarqube.simonjamesrowe.com
      secretName: tls-simonjamesrowe-com-p
