config-root/namespaces/sonarqube/sonarqube/sonarqube-sonarqube-ingress.yaml
# Source: sonarqube/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-sonarqube
  labels:
    app: sonarqube
    chart: sonarqube-1.2.5_179
    release: sonarqube
    heritage: Helm
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'sonarqube'
  namespace: sonarqube
spec:
  rules:
    - host: sonarqube.simonjamesrowe.com
      http:
        paths:
          - backend:
              service:
                name: sonarqube-sonarqube
                port:
                  number: 9000
            path:
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - sonarqube.simonjamesrowe.com
      secretName: tls-simonjamesrowe-com-p
